updated documentation for running locally from github repo.